# reduce-aviation-fatalities

./: .gitignore  README.md  aviation_fatalities.pptx  config.py  deep_net.py  exploratory_analysis.ipynb  lgb_model.py  loadSavedData.py  load_data.py  main.py  playbook.ipynb  plot_confusion_matrix.py  plotting.py  precision_recall.xd  pyproject.toml  requirements.txt  run_model.py  snippets.py
new files/: lgb_model.py  plot_bio_data.py  plot_confusion_matrix.py  plot_learning_curves.py
